# QWatch

./: CMakeLists.txt  readme.md  res.qrc
res/style/: Dark.qss
src/: config.hpp  contextwindow.cpp  contextwindow.hpp  errordialog.cpp  errordialog.hpp  font.cpp  font.hpp  footer.cpp  footer.hpp  icon.cpp  icon.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mediainformation.hpp  networkmanager.cpp  networkmanager.hpp  utils.cpp  utils.hpp  videoplayer.cpp  videoplayer.hpp
